--- a/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
+++ b/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
@@ -25,16 +25,13 @@
   <div class="defineFont {{isMobile? ' col-12 px-3':' col-6 pe-5'}}">
     <h1 class=""> <strong class="fontTitulo">O CENTRO PROINF</strong></h1>
     <p class="fs-5 mt-4 formataParagrafos">
-      A ProInf emerge como um farol de excelência e
-      inovação no campo da proteção à infância e
-      juventude, dedicando-se a capacitar aqueles
-      que desejam fazer a diferença. Inspirada na
-      cooperação em rede, a ProInf não é apenas um
-      centro de estudos; é um movimento para
-      fortalecer o ensino jurídico com foco na
-      proteção infantojuvenil, superando barreiras
-      de incompreensão para tecer uma rede de
-      conhecimento, apoio e ação conjunta.</p>
+      O ProInf propõe inovação no campo da proteção à infância e juventude,
+      dedicando-se a capacitar aqueles que desejam se integrar e capacitar nessa
+      área tão sensível do Direiro. Inspirada na cooperação em rede, o ProInf não
+      é apenas um centro de estudos; é um movimento para fortalecer o ensino jurídico
+      com foco na proteção infantojuvenil, superando barreiras das incompreensões que
+      permeiam os direitos das crianças, dos adolescentes e dos jovens no cenário brasileiro.
+      Nesse sentido, intuito é tecer uma rede de conhecimento, apoio e ação conjunta.</p>
       <div class="col-12 align-self-center d-flex justify-content-start mt-3">
     <button type="button" (click)="router.navigate(['blog/quemSomos'])"
         class="{{isMobile? 'w-100':'ps-3'}} justify-content-center overlay-layer btn btn-sm btn-outline-dark icon-button d-flex text-start shadow-sm rounded">
@@ -55,25 +52,25 @@
   <div class=" defineFont {{isMobile? 'px-3':''}}">
     <h1 class=""> <strong class="fontTitulo2">NOSSOS FUNDAMENTOS</strong></h1>
     <p class="fs-5 mt-4 formataParagrafos">
-      Na busca por oferecer a mais completa e eficaz preparação para concursos na área de Defensoria
-      Pública, com foco especial no Direito da Criança e do Adolescente, estabelecemos três pilares
+      Na busca por oferecer a mais completa e eficaz capacitação profissional e para concursos públicos,
+      com foco especial em Direito da Criança, estabelecemos três pilares
       fundamentais que norteiam todo o nosso processo educacional. Estes pilares são projetados para
       garantir não apenas a absorção do conteúdo necessário, mas também para desenvolver uma
       compreensão profunda e aplicada do material.</p>
   </div>
   <div class="w-100 d-flex flex-wrap justify-content-center" style="padding-right: 4rem;">
     <div class="d-flex justify-content-center {{isMobile? 'col-12':'col-4'}}" [style]="isMobile?'padding-bottom: 10rem;':''">
-      <div class="flip-container">
-        <div class="flipper">
-          <div class="front">
-            <img src="assets/imgs/fundamento 1.png" style="width: 23rem; object-fit: contain;" height="350" />
+      <div class="flip-box">
+        <div class="flip-box-inner">
+          <div class="flip-box-front">
+            <img src="assets/imgs/fundamento 1.png" style="width: 23rem; object-fit: contain;" height="300" />
             <h1 class="text-center" style="top: -10rem; left: 3rem; position: relative;">
               <p class="text defineFont" style="width: 60%;">
-                <strong>ESPECIALIZAÇÃO PROFUNDA EM ECA</strong>
+                <strong>ESPECIALIZAÇÃO PROFUNDA EM DIREITO DA CRIANÇA</strong>
               </p>
             </h1>
           </div>
-          <div class="back">
+          <div class="flip-box-back">
             <img src="assets/imgs/fundamento 1.png" style="width: 23rem; object-fit: contain;" height="350" />
             <h4 class="text-center" style="top: -10rem; left: 3rem; position: relative;">
               <p class="text defineFont" style="width: 90%;">
@@ -86,17 +83,17 @@
     </div>
 
     <div class="d-flex justify-content-center {{isMobile? 'col-12':'col-4'}}" [style]="isMobile?'padding-bottom: 10rem;':''">
-      <div class="flip-container">
-        <div class="flipper">
-          <div class="front">
-            <img src="assets/imgs/fundamento 2.png" style="width: 23rem; object-fit: contain;" height="350" />
+      <div class="flip-box">
+        <div class="flip-box-inner">
+          <div class="flip-box-front">
+            <img src="assets/imgs/fundamento 2.png" style="width: 23rem; object-fit: contain;" height="300" />
             <h1 class="text-center" style="top: -10rem; left: 3rem; position: relative;">
               <p class="text defineFont" style="width: 60%;">
                 <strong>METODOLOGIA INOVADORA</strong>
               </p>
             </h1>
           </div>
-          <div class="back">
+          <div class="flip-box-back">
             <img src="assets/imgs/fundamento 2.png" style="width: 23rem; object-fit: contain;" height="350" />
             <h4 class="text-center" style="top: -10rem; left: 3rem; position: relative;">
               <p class="text defineFont" style="width: 90%;">
@@ -109,17 +106,17 @@
     </div>
 
     <div class="d-flex justify-content-center {{isMobile? 'col-12':'col-4'}}" [style]="isMobile?'padding-bottom: 10rem;':''">
-      <div class="flip-container">
-        <div class="flipper">
-          <div class="front">
-            <img src="assets/imgs/fundamento 3.png" style="width: 23rem; object-fit: contain;" height="350" />
+      <div class="flip-box">
+        <div class="flip-box-inner">
+          <div class="flip-box-front">
+            <img src="assets/imgs/fundamento 3.png" style="width: 23rem; object-fit: contain;" height="300" />
             <h1 class="text-center" style="top: -11rem; left: 3rem; position: relative;">
               <p class="text defineFont" style="width: 60%;">
                 <strong>SUPORTE PERSONALIZADO E COMUNIDADE</strong>
               </p>
             </h1>
           </div>
-          <div class="back">
+          <div class="flip-box-back">
             <img src="assets/imgs/fundamento 3.png" style="width: 23rem; object-fit: contain;" height="350" />
             <h4 class="text-center" style="top: -11rem; left: 3rem; position: relative;">
               <p class="text defineFont" style="width: 90%;">
@@ -135,19 +132,19 @@
 
 <div class="w-100 d-flex justify-content-center mt-5 mb-5">
   <div class="col-12 d-flex justify-content-center" style="top: 71px; position: relative;" >
-    <div class="col-5">
+    <!-- <div class="col-5">
       <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
-    </div>
-    <div class="{{isMobile? 'col-2':'col-1'}} d-flex justify-content-center">
+    </div> -->
+    <!-- <div class="{{isMobile? 'col-2':'col-1'}} d-flex justify-content-center">
       <img src="../../../../assets/imgs/divideNoMeio.png" class="image" height="50">
-    </div>
-    <div class="col-5">
+    </div> -->
+    <!-- <div class="col-5">
       <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
-    </div>
+    </div> -->
   </div>
 </div>
 
-<div class="w-100 fundoRosa pt-5 ">
+<!-- <div class="w-100 fundoRosa pt-5 ">
   <div class="col-12 {{isMobile? 'px-3':''}}" style="position: relative; top: 27px;" [style]="isMobile?'':'padding-right: 6rem !important; padding-left: 6rem !important;'">
     <h1><strong class="fontTitulo2">COMECE A ESTUDAR</strong></h1>
 
@@ -176,9 +173,9 @@
       </button>
     </div>
   </div>
-</div>
+</div> -->
 
-<div class="w-100 d-flex flex-wrap" [style]="isMobile? 'padding-left:0.9rem !important': 'padding-left:2rem !important;'" style="padding-top: 5rem;">
+<!-- <div class="w-100 d-flex flex-wrap" [style]="isMobile? 'padding-left:0.9rem !important': 'padding-left:2rem !important;'" style="padding-top: 5rem;">
   <div class="col-1 pe-2 d-flex justify-content-center mt-4" [style]="isMobile?'margin-left: 2rem !important;':'margin-left: 4rem !important;'">
     <span class="material-icons fs-1" style="color: #EE5b54; font-size: 3.5rem !important;">
       notifications_none
@@ -246,9 +243,9 @@
     </div>
   </div>
 
-</div>
+</div> -->
 
-<div class="w-100 d-flex justify-content-center mt-5 mb-5">
+<!-- <div class="w-100 d-flex justify-content-center mt-5 mb-5">
   <div class="col-12 d-flex justify-content-center" style="top: 71px; position: relative;" >
     <div class="col-5">
       <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
@@ -260,13 +257,13 @@
       <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
     </div>
   </div>
-</div>
+</div> -->
 
-<div class="w-100 d-flex flex-wrap fundoRosa pt-5 justify-content-center">
+<!-- <div class="w-100 d-flex flex-wrap fundoRosa pt-5 justify-content-center">
   <div class="imagemDeFundo" [style]="isMobile? 'width: 1px;':''"  >
 
   </div>
-  <div style="position: absolute;" class="w-100">
+  <!-- <div style="position: absolute;" class="w-100">
     <div class="w-100 d-flex justify-content-center text-center">
       <h1>
         <strong class="fs-2">
@@ -315,6 +312,7 @@
       </div>
     </div>
   </div>
+
   <div class="w-100 d-flex justify-content-center mt-5 mb-5">
     <div class="col-12 d-flex justify-content-center" style="top: 71px; position: relative;" >
       <div class="col-5">
@@ -328,6 +326,6 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 
