--- a/cursoADVweb/src/app/blog/pages/quemSomos/quemSomos.component.html
+++ b/cursoADVweb/src/app/blog/pages/quemSomos/quemSomos.component.html
@@ -1,16 +1,19 @@
 <div >
   <div class="w-100 d-flex flex-wrap fundoRosa defineFont"
-    [style]="isMobile? '':'padding-left: 7rem; height: 27.3rem;'">
+    [style]="isMobile? '':'padding-left: 7rem; height: 30.3rem;'">
     <div class="{{isMobile? 'col-12 px-3':'col-7'}}">
       <div class="col-12 pt-4 pb-4">
         <h1><strong class="fontTitulo2">O CENTRO PROINF</strong></h1>
       </div>
       <div class="col-12" *ngIf="true">
         <P class="fs-5 formataParagrafos" >
-          A Proinf emerge com um farol de excelência e inovação no comapo da proteção à infância e juventude, dedicando-se a capacitar aqueles
-          que desejam fazer a difeerença. <strong>Inspirada na cooperação em rede, a Proinf não é apenas um centro de estudos;</strong>
-          é um movimento para fortalecer o ensino jurídico com foco na proteção infantojuvenil, superando barreiras de incompreensão para
-          tecer uma rede de conhecimento, apoio e ação conjunta.
+          O ProInf propõe inovação no campo da proteção à infância e juventude,
+          dedicando-se a capacitar aqueles que desejam se integrar e capacitar nessa
+          área tão sensível do Direiro. <strong>Inspirada na cooperação em rede, o ProInf não
+          é apenas um centro de estudos;</strong> é um movimento para fortalecer o ensino jurídico
+          com foco na proteção infantojuvenil, superando barreiras das incompreensões que
+          permeiam os direitos das crianças, dos adolescentes e dos jovens no cenário brasileiro.
+          Nesse sentido, intuito é tecer uma rede de conhecimento, apoio e ação conjunta.
         </P>
       </div>
       <div class="col-12 d-flex flex-wrap pt-4">
@@ -21,43 +24,73 @@
           <a href="#historia" [style]="isMobile?'width:100%':'width: 95%;'" class="btn rounded-pill btn-outline-dark pt-3 pb-3"> Nossa história </a>
         </div>
         <div class="{{isMobile? 'col-12 pt-4':'ps-4 col-4'}}">
-          <a href="#fundamentos" [style]="isMobile?'width:100%':'width: 95%;'" class="btn rounded-pill btn-outline-dark pt-3 pb-3"> Os fundamentos </a>
+          <a href="#fundamentos" [style]="isMobile?'width:100%':'width: 95%;'" class="btn rounded-pill btn-outline-dark pt-3 pb-3"> Os fundadores </a>
         </div>
       </div>
     </div>
 
     <div class="{{isMobile? 'col-12':'col-5'}} d-flex justify-content-end">
-      <img [style]="isMobile? '' :'position: relative; top: -4rem;'" src="../../../../assets/imgs/site proinf quem somos e cursos/11.png" alt="" height="{{isMobile?'368':'500'}}">
+      <img [style]="isMobile? '' :'position: relative; top: -1rem;'" src="../../../../assets/imgs/site proinf quem somos e cursos/11.png" alt="" height="{{isMobile?'368':'500'}}">
     </div>
   </div>
-  <div class=" flex-wrap {{isMobile? '':'contemPaginas'}}">
-    <div id="no" class="w-100">
-      <div class="col-12 pt-5 pb-4 d-flex flex-wrap {{isMobile? 'ps-3':''}}">
-        <div class="w-100">
+
+  <div class="w-100 d-flex justify-content-center mt-5 mb-5 {{isMobile? '':'contemPaginas'}}">
+    <div class="col-12 d-flex" style="top: 24px; position: relative;" >
+      <div class="col-5">
+        <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
+      </div>
+      <div class=" col-2 d-flex justify-content-center">
+        <img src="../../../../assets/imgs/divideNoMeio.png" class="image" height="50">
+      </div>
+      <div class="col-5">
+        <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
+      </div>
+    </div>
+  </div>
+  <div class="flex-wrap col-12">
+    <div id="no" class="w-100 fundoRosa">
+      <div class="col-12 pt-5 pb-4 d-flex flex-wrap {{isMobile? 'ps-3':'contemPaginas'}}">
+        <div class="">
           <h1><strong class="fontTitulo2">Por que o nó?</strong></h1>
         </div>
 
-        <div class=" {{isMobile? 'col-12 pe-3':'col-6'}} ">
-          <img class="me-3" style="float: left;" src="../../../../assets/imgs/logoMobile.png" alt="" height="{{isMobile? '100':'150'}}">
-          <P class="formataParagrafos fs-5" >
+        <div class="col-12">
+          <div class="w-100 d-flex flex-wrap {{isMobile? 'justify-content-center':''}}">
+            <img class="me-5" src="../../../../assets/imgs/no 1.png" alt="" height="{{isMobile? '100':'150'}}">
+            <p class="{{isMobile? '':'formataParagrafos'}} fs-5 mt-4">
+              O "nó" é o elemento central da marca.
+              Representa justamente a ideia de colaboração e interação, destacando a importância de estabelecer conexões sólidas e significativas.
+            </p>
+          </div>
+          <div class="w-100 d-flex flex-wrap {{isMobile? 'justify-content-center':''}}">
+            <p class="{{isMobile? '':'formataParagrafos'}} fs-5 mt-4">
+              Ele reflete a intenção de construir uma rede forte, na qual todas as pessoas estão interligadas,
+              trabalhando juntas para alcançar objetivos comuns e promover o crescimento mútuo.
+            </p>
+            <img class="me-3" src="../../../../assets/imgs/no 2.png" alt="" height="{{isMobile? '100':'150'}}">
+            <img class="me-3" src="../../../../assets/imgs/no 3.png" alt="" height="{{isMobile? '100':'150'}}">
+            <img class="me-3" src="../../../../assets/imgs/no 4.png" alt="" height="{{isMobile? '100':'150'}}">
+
+          </div>
+          <!-- <P class="formataParagrafos fs-5" >
             Em nosso coração, o nó não é apenas um simbolo, mas a própria essência da Proinf,
             <strong>Ele encapsula a colaboração e a interconexão, enfatizando a necessidade
               vital de criar vinculos fortes e significativos entre todos nós. </strong>
             Este nó simboliza a união de esforços, a partilha de saberes e o compromisso, mútuo em salvaguardar
           o bem-estar de crianças e adolescentes. Aprender a fazer um nó é um rito de passagem na infãncia,
-          um lembrete de que, juntos, podemmos enfrentar desafios e superar obstáculos.</P>
+          um lembrete de que, juntos, podemmos enfrentar desafios e superar obstáculos.</P> -->
         </div>
-        <div class="{{isMobile? 'col-12 pe-3':'col-6 d-flex justify-content-end ps-4'}}">
+        <!-- <div class="{{isMobile? 'col-12 pe-3':'col-6 d-flex justify-content-end ps-4'}}">
           <img class="me-3" src="../../../../assets/imgs/site proinf quem somos e cursos/12.png" alt="" height="{{isMobile? '338':'450'}}">
 
-        </div>
+        </div> -->
       </div>
       <div >
 
       </div>
     </div>
 
-    <div class="w-100 d-flex justify-content-center mt-5 mb-5">
+    <div class="w-100 d-flex justify-content-center mt-5 mb-5 {{isMobile? '':'contemPaginas'}}">
       <div class="col-12 d-flex" style="top: 24px; position: relative;" >
         <div class="col-5">
           <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
@@ -71,25 +104,27 @@
       </div>
     </div>
 
-    <div id="historia" class="w-100 {{isMobile? 'ps-3':'' }}">
+    <div id="historia" class="w-100 {{isMobile? 'ps-3':'contemPaginas' }}">
       <div class="w-100">
         <h1><strong class="fontTitulo">NOSSA HISTÓRIA</strong></h1>
       </div>
       <div class="col-12 {{isMobile? 'pe-3':'' }}">
         <P class="formataParagrafos fs-5" >
-          A história da Proinf, o Centro de Estudos em Proteção Infantojuvenil, começa com a união de duas mentes visionárias e comprometidas:
-          Bruno César da Silva e Isabelle Lucena Paiva. Situados na vibrante cidade de Ribeirão Preto, Bruno e isabella compartilharam uma paixão comum:
-        <strong>Tranformar a proteção e defesa dos direitos de crianças e adolescentes através da educação jurídica.</strong></P>
+          A história do ProInf, Centro de Estudos em Proteção Infantojuvenil, começou com o contado prático dos seus fundadores, Bruno Cesar da Silva e Isabelle Lucena Paiva. Através da Defensoria Pública Estatual, na cidade de Ribeirão Preto, no dia a dia do intenso e complexo trabalho realizado, especialmente no atendimento às famílias, ambos perceberam que compartilhavam uma meta em comum: transformar a proteção e defesa dos direitos de crianças e adolescentes através da educação jurídica.</P>
       </div>
 
       <div class="col-12 d-flex flex-wrap" style="margin-top: 7rem !important;">
         <div class="flex-wrap {{isMobile? 'col-12 pe-3':'col-4 pe-4' }}">
           <div class="caixa">
             <div class=" text-center fontTitulo2 m-4 p-2 caixaTitulo formataParagrafos" >
-              Origens <br>e inspiração
+              Origens <br>e Inspiração
             </div>
-            <div class=" m-4 formataParagrafos fs-5 caixaBody"> Bruno César da silva e Isabelle Lucena Paiva, unidos pela paixão de proteger direitos infanto juvenis, combinaram a experiência prática de Bruno
-              como defensor público e professor, com o rigor acadêmico e a pesquisa de Isabelle, criando uma base sólida para a fundação do Proinfo.
+            <div class=" m-4 formataParagrafos fs-5 caixaBody">
+              Bruno e Isabelle, unidos pelo interesse em refinar a compreensão dos direitos
+              infantojuvenis, combinaram a experiência prática de Bruno como defensor
+              público e professor com o rigor acadêmico e a pesquisa de Isabelle,
+              criando uma base sólida para a fundação do ProInf.
+
             </div>
           </div>
         </div>
@@ -99,9 +134,12 @@
               Fundação <br>e Missão
             </div>
             <div class=" mx-4 mt-4 formataParagrafos fs-5 caixaBody">
-              O Proinf nasceu para preencher uma lacuna na educação jurídica, focando exclusivamente na proteção da infância e juventude de
-              forma acessível e profunda. Seu objetivo principal é capacitar profissionais para defender os direitos das
-              crianças e do adolescentes com competência e sensibilidade.
+              O ProInf nasceu para preencher uma lacuna na educação sociojurídica geral,
+              com enfoque especializado na proteção da infância e juventude de forma
+              acessível e profunda. Seu objetivo é sanar com qualidade a carência dessa
+              área no ensino de Direito, capacitando profissionais para defender os
+              direitos das crianças e do adolescentes com competência e sensibilidade.
+
             </div>
           </div>
         </div>
@@ -111,16 +149,18 @@
               Futuro <br>e Visão
             </div>
             <div class=" m-4 formataParagrafos fs-5 caixaBody">
-              Com um olhar para o futuro, o Proinf aspira a expandir seu impacto por meio de tecnologias inovadoras de ensino, parcerias
-              estratégias e um compromisso contínuo de inspirar defensores dos direitos da criança e do adolescente, visando criar uma sociedade mais segura
-              e acolhedora para os jovens.
+              O ProInf visa expandir seu impacto por meio de métodos acessíveis e com o
+              uso de recursos inovadores de ensino, parcerias estratégicas de trabalhos
+              em rede. Nossa percepção final será sempre a de criar uma sociedade mais
+              segura e acolhedora para as crianças, adolescentes e jovens, mantendo o
+              compromisso contínuo de inspirar novos defensores dos seus direitos.
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="w-100 d-flex justify-content-center mt-5 mb-5">
+    <div class="w-100 d-flex justify-content-center mt-5 mb-5 {{isMobile? '':'contemPaginas'}}">
       <div class="col-12 d-flex" style="top: 24px; position: relative;" >
         <div class="col-5">
           <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
@@ -134,48 +174,52 @@
       </div>
     </div>
 
-    <div id="fundamentos" class="w-100 {{isMobile? 'ps-3':''}}">
+    <div id="fundamentos" class="w-100 {{isMobile? 'ps-3':'contemPaginas'}}">
       <div class="w-100">
         <h1><strong class="fontTitulo">OS FUNDADORES</strong></h1>
       </div>
       <div class="col-12 d-flex flex-wrap">
-        <div class="{{isMobile? 'col-12':'col-6'}} flex-wrap">
-          <img style="border-radius: 20px;"
-          src="../../../../assets/imgs/site proinf quem somos e cursos/a.png"
-          class="" height="{{isMobile? '530':'780'}}">
-
-          <div class="w-100 pt-5">
-            <h1><strong class="fontTitulo2 my-4">Bruno César da Silva</strong></h1>
+        <div class="{{isMobile? 'w-100 d-flex justify-content-center':'w-25'}}">
+          <div class="circle" style="height: 220px !important; width: 220px !important;">
+            <img src="../../../../assets/imgs/site proinf quem somos e cursos/a.png"
+            class="" height="300">
           </div>
+        </div>
+
+        <div class="{{isMobile? 'w-100 pt-2':'w-75'}}">
+          <h1><strong class="fontTitulo2 my-4">Bruno César da Silva</strong></h1>
           <p class="formataParagrafos my-4 {{isMobile? 'pe-3':'pe-4'}} fs-5">
-            Defensor píblico renomado e professor apaixonado, cuja trajetória profissional é
-            marcada pela dedicação aos direitos da criança e do adolescente. Formado em
-            Direito, Bruno encontrou sua vocação na defesa pública, especializando-se na proteção
-            jurídica de crianças e adolescentes em situação de vulnerabilidade.
-            Complementando sua prática jurídica, ele seguiu o caminho acadêmico, tornando-se
-            doutorando em Psicologia pela universidade de São Paulo (USP) em Riveirão Preto, com um foco em estudos
-            que unem Direito e Psicologia na defesa dos direitos infantojuvenis. Com professor, Bruno compartilha seu vasto
-            conhecimento e experiência, inspirando futuras gerações de juristas a abordarem a lei com
-            compaixão e dedicação.
+            Bruno é um defensor público renomado e professor engajado, cuja trajetória
+            profissional é marcada pela dedicação aos direitos da criança e do adolescente.
+            Graduado em Direito, encontrou sua vocação na Defensoria Pública,
+            especializando-se na proteção jurídica de crianças e adolescentes em situação de
+            vulnerabilidade. Complementando sua prática jurídica, seguiu o caminho acadêmico
+            e está atualmente cursando doutorado em Psicologia na Universidade de São Paulo
+            (USP) em Ribeirão Preto, com foco em estudos que integram Direito e Psicologia na
+            defesa dos direitos infantojuvenis. Como professor, Bruno compartilha seus
+            conhecimentos e experiência, inspirando futuras gerações de juristas a abordarem
+            a lei com empatia e comprometimento.
           </p>
         </div>
-        <div class="{{isMobile? 'col-12':'col-6 ps-3'}}  flex-wrap">
-          <img style="border-radius: 20px;"
-          src="../../../../assets/imgs/site proinf quem somos e cursos/b.png"
-          class="" height="{{isMobile? '530':'780'}}">
-
-          <div class="w-100 pt-5">
-            <h1><strong class="fontTitulo2 my-4">Isabelle Lucena Paiva</strong></h1>
+        <div class="{{isMobile? 'w-100 pt-2 d-flex justify-content-center':'w-25'}}">
+          <div class="circle" style="height: 220px !important; width: 220px !important;">
+            <img src="../../../../assets/imgs/site proinf quem somos e cursos/b.png"
+            class="" height="300">
           </div>
+        </div>
+
+        <div class="{{isMobile? 'w-100 pt-2':'w-75 pt-5'}}">
+          <h1><strong class="fontTitulo2 my-4">Isabelle Lucena Paiva</strong></h1>
           <p class="formataParagrafos my-4 {{isMobile? 'pe-3':'pe-4'}} fs-5">
-            Pesquisadora e acadêmica cuja  paixão pelo Direito da Criança e do Adolescente a levou
-            a contribuições significativas tanto no campo jurídico quanto educacional. Graduada em Direito, Isabelle
-            não tardou a mergulhar no mundo da pesquisa, optando por focar em estudos que exploram as
-            desigualdades dentro do acesso á justiça para criança e adolescentes. Atualmente, ela é mestrada na USP, onde seu
-            trabalho no grupo de Pesquisa "Acesso à Justiça e Desigualdades" tem sido crucial para entender
-            e desenvolver melhores práticas de proteção jurídica para o publico infantojuvenil. Isabelle é conhecida
-            por sua habilidade de comunicar questões complexas de maneira clara e engajante, tornando-a uma educadora admirada e uma voz
-            inflente na advocacia pelos direitos da crianças.
+            Isabelle é uma pesquisadora e acadêmica dedicada cujo interesse pelo Direito
+            da Criança e do Adolescente resultou em contribuições significativas tanto no
+            campo jurídico quanto educacional. Graduada em Direito, ela iniciou sua
+            trajetória na pesquisa com foco nas desigualdades no acesso à justiça para
+            crianças e adolescentes, além de suas interseções com os estudos feministas.
+            Recentemente, concluiu seu mestrado na Universidade de São Paulo, onde
+            seu trabalho no grupo de pesquisa "Acesso à Justiça e Desigualdades" foi
+            fundamental para entender e desenvolver melhores práticas de proteção
+            jurídica para o público infantojuvenil.
           </p>
         </div>
       </div>
