--- a/cursoADVweb/src/app/acesso/pages/cadastrar/cadastrar.component.scss
+++ b/cursoADVweb/src/app/acesso/pages/cadastrar/cadastrar.component.scss
@@ -5,6 +5,7 @@
   background-repeat: no-repeat;
   color: #000;
   background-size: 100%;
+  background-size: cover;
   position: absolute;
   z-index: -2;
 }
@@ -12,16 +13,25 @@
 .box {
   width: 100%;
   height: 80rem;
-  opacity: 0.8;
-
+  opacity: 0.9;
   background-color: #ffb656;
 }
 
 .upload_btn {
-  position: absolute;
-  width: 15%;
-  left: 49%;
+  position: relative;
+  width: 23%;
+  left: 24%;
   height: 50px !important;
   z-index: 10;
   opacity: 0;
+}
+
+.scroll {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 815px;
+
+  &::-webkit-scrollbar {
+    width: 0px !important;
+  }
 }
