--- a/cursoADVweb/src/app/acesso/pages/login/login.component.scss
+++ b/cursoADVweb/src/app/acesso/pages/login/login.component.scss
@@ -1,9 +1,10 @@
 .imagem {
   background-image: url('../../../../assets/imgs/fundoLogin.png');
   width: 100%;
-  height: 80rem;
+  height: 100vh;
   background-repeat: no-repeat;
   color: #000;
+  background-size: cover;
   background-size: 100%;
   position: absolute;
   z-index: -2;
@@ -11,9 +12,8 @@
 
 .box {
   width: 100%;
-  height: 80rem;
-  opacity: 0.8;
-
+  height: 100vh;
+  opacity: 0.9;
   background-color: #ffb656;
 }
 
@@ -34,4 +34,9 @@
     transform: translateX(0%);
 
   }
+}
+
+.mat-mdc-dialog-container .mdc-dialog__surface {
+  background-color: #ffffff;
+  /* color: black; */
 }
