--- a/cursoADVweb/src/app/areaAluno/contratacao/contratacao.component.html
+++ b/cursoADVweb/src/app/areaAluno/contratacao/contratacao.component.html
@@ -1,1 +1,206 @@
-<p>contratacao works!</p>
+<app-sidebar-area-aluno></app-sidebar-area-aluno>
+<div class="col-12 d-flex flex-wrap justify-content-center" [style]="isMobile?'padding-top: 2rem !important;':'padding-top: 2rem !important;'">
+  <div class="col-12" *ngIf="carregando">
+    <div class="clearfix d-flex justify-content-center">
+      <p class="fs-6"> Carregando </p>
+      <div class="spinner-border spinner-border-sm ms-2 " style="width: 1rem; height: 1rem;" role="status">
+        <span class="sr-only"></span>
+      </div>
+    </div>
+  </div>
+
+  <div *ngIf="!carregando" class="{{isMobile?'col-12':'col-6'}} d-flex flex-wrap" style="background-color: #ffedeb; border-radius: 10px; border: 1px solid #e64944;">
+    <div class="col-12 pt-4 px-4 d-flex flex-wrap">
+      <div class="col-3">
+        <img style="border-radius: 10px;" src="{{curso.src}}" class="card-img-top" alt="...">
+      </div>
+      <div class="col-9 ps-3">
+        <h2><p><b>{{curso.titulo}}</b></p></h2>
+        <h1>
+          <b style="color: #e64944;">{{parcelas}}</b><br>
+          <small style="font-size:medium;">{{valorFormatado}} à vista <br/> ou {{valorComDesconto}} inscritos pelas cotistas</small>
+        </h1>
+      </div>
+    </div>
+
+    <hr class="mt-2 mb-2 mx-4" style="width:100%; color: #e64944; height: 2px; border-bottom: 1px solid #e64944;">
+
+    <form [formGroup]="formularioCadastro" class="px-4 col-12 camposBrancos d-flex flex-wrap">
+      <div class="col-12 d-flex flex-wrap ps-3 pt-3 pe-3 mb-4" style="background-color: white; border-radius: 10px;">
+        <div class="col-12">
+          <mat-form-field>
+            <mat-label>Definir lista do candidato</mat-label>
+            <mat-select [(ngModel)]="tipoAluno" formControlName="tipoAluno">
+              <mat-option  *ngFor="let item of listaTipoAluno" value="{{item.index}}">{{item.descricao}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div  class="col-12 d-flex flex-wrap justify-content-end pb-4" *ngIf="tipoAluno != '0'" >
+          <div class="w-100 d-flex">
+            <h3>Valor para os inscritos pelas cotas: </h3>
+            <h3 class="ps-2">
+              <b style="color: #e64944;"> {{valorComDesconto}}</b><br>
+            </h3>
+          </div>
+
+          <hr class="mt-2 mb-2 " style="width:100%; color: #e64944; height: 2px; border-bottom: 1px solid #e64944;">
+
+          <div class=" {{isMobile?'w-100 d-flex justify-content-center mb-3':'col-5 pt-3 ps-3'}}">
+            {{nomeArquivo !="" ?nomeArquivo.substring(0, 24) + "..." : "SELECIONE UM ARQUIVO"}}
+          </div>
+          <div class="{{isMobile?'col-8':'col-5 d-flex justify-content-end'}} ">
+            <input (change)="upload($event)" type="file" class="upload_btn" multiple/>
+            <button type="button"  class="btn btn-success btn-sm rounded-pill mt-2">
+              ADICIONAR COMPROVANTE
+            </button>
+          </div>
+          <div class="col-1 me-3">
+            <button type="button" (click)="Limpar()" class="btn btn-danger btn-sm rounded-pill text-light ms-2">
+              <span class="material-icons mt-1">
+                delete
+              </span>
+            </button>
+          </div>
+
+          <div>
+
+          </div>
+        </div>
+      </div>
+      <div class="col-12">
+        <mat-form-field  class="example-full-width w-100 pt-2">
+          <mat-label>Nome completo</mat-label>
+          <input required matInput formControlName="Nome">
+        </mat-form-field>
+      </div>
+
+      <div class="col-12">
+        <mat-form-field class="example-full-width w-100 pt-2">
+          <mat-label>Seu e-mail</mat-label>
+          <input required (change)="validateEmail()" matInput formControlName="Email">
+          <!-- <mat-error *ngIf="!emailValido" >{{errorMessage['Email']}}</mat-error> -->
+        </mat-form-field>
+      </div>
+
+      <div class="col-12" *ngIf="usuario == null || usuario == undefined">
+        <mat-form-field class="example-full-width w-100 pt-2">
+          <mat-label>Confirme o seu e-mail</mat-label>
+          <input matInput required formControlName="ConfirmaEmail">
+        </mat-form-field>
+      </div>
+
+      <div class="col-6">
+        <mat-form-field class="example-full-width w-100 pt-2">
+          <mat-label>CPF / CNPJ</mat-label>
+          <input matInput (change)="formataCpfCpjs()" required formControlName="CpfCnpj">
+        </mat-form-field>
+      </div>
+
+      <div class="col-6 ps-2">
+        <mat-form-field class="example-full-width w-100 pt-2">
+          <mat-label>Telefone</mat-label>
+          <input matInput (change)="formataTelefone()" required formControlName="Telefone">
+        </mat-form-field>
+      </div>
+
+      <!-- <div class="col-12">
+        <mat-form-field class="example-full-width w-100 pt-2">
+          <mat-label>Rua</mat-label>
+          <input matInput required formControlName="Rua">
+        </mat-form-field>
+      </div>
+
+      <div class="col-6 ">
+        <mat-form-field class="example-full-width w-100 pt-2">
+          <mat-label>Cep</mat-label>
+          <input matInput required placeholder="00000-000" maxlength="9" formControlName="Cep">
+        </mat-form-field>
+      </div>
+
+      <div class="col-6 ps-2">
+        <mat-form-field class="example-full-width w-100 pt-2">
+          <mat-label>Numero</mat-label>
+          <input matInput required formControlName="Numero">
+        </mat-form-field>
+      </div> -->
+
+      <div class="col-12 d-flex mb-4 mt-2">
+        <div class="col-5 d-flex {{isMobile? 'justify-content-center':'justify-content-start'}} ">
+          <button mat-raised-button (click)="tipoPagamento = 1">
+            <span class="material-icons me-1">
+             credit_card
+            </span>
+            <span *ngIf="!isMobile"> Cartão de crédito </span>
+          </button>
+        </div>
+        <div class="col-3 d-flex {{isMobile? 'justify-content-center':'justify-content-start'}}">
+          <button mat-raised-button (click)="tipoPagamento = 2">
+            <span class="material-icons me-1">
+             pix
+            </span>
+            <span *ngIf="!isMobile">Pix</span>
+          </button>
+        </div>
+        <!-- <div class="col-4 d-flex justify-content-center">
+          <button mat-raised-button (click)="tipoPagamento = 3">
+            <span class="material-icons me-1">
+             request_quote
+            </span>
+            <span *ngIf="!isMobile">Boleto</span>
+          </button>
+        </div> -->
+      </div>
+      <div *ngIf="tipoPagamento == 1" class="col-12 d-flex flex-wrap ps-3 pt-3 pe-3 mb-4" style="background-color: white; border-radius: 10px;">
+        <div class="{{isMobile?'col-12':'col-6'}}">
+          <mat-form-field class="example-full-width w-100 pt-2">
+            <mat-label>Numero do cartão</mat-label>
+            <input matInput (change)="formatarCartao()" required formControlName="NumeroCartao">
+          </mat-form-field>
+        </div>
+        <div class="{{isMobile?'col-12':'col-6 ps-2'}}">
+          <mat-form-field class="example-full-width w-100 pt-2">
+            <mat-label>Nome do titular</mat-label>
+            <input matInput required formControlName="NomeTitular">
+          </mat-form-field>
+        </div>
+        <div class="col-6">
+          <mat-form-field>
+            <mat-label>Mes/Ano</mat-label>
+            <input matInput [matDatepicker]="dp" [formControl]="date" >
+            <!-- <mat-hint>MM/YYYY</mat-hint> -->
+            <mat-datepicker-toggle matIconSuffix [for]="dp"></mat-datepicker-toggle>
+            <mat-datepicker #dp
+                            startView="multi-year"
+                            (monthSelected)="setMonthAndYear($event, dp)"
+                            panelClass="example-month-picker">
+            </mat-datepicker>
+          </mat-form-field>
+        </div>
+        <div class="col-6 ps-5">
+          <mat-form-field class="example-full-width w-75" style="max-width: 77px !important;">
+            <mat-label>CVV</mat-label>
+            <input matInput required formControlName="ccv">
+          </mat-form-field>
+        </div>
+        <div class="col-12">
+          <mat-form-field>
+            <mat-label>Número de parcelas</mat-label>
+            <mat-select formControlName="NumeroParcelas">
+              <mat-option *ngFor="let item of listaParcelas" value="{{item.index}}">{{item.descricao}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+      </div>
+      <div *ngIf="tipoPagamento == 2" class="col-12 d-flex justify-content-center ps-3 pt-3 pb-3 pe-3 mb-4" style="background-color: white; border-radius: 10px;">
+        VOCÊ RECEBERA UM SMS COM O NOSSO QRCODE
+      </div>
+      <!-- <div *ngIf="tipoPagamento == 3" class="col-12 d-flex justify-content-center ps-3 pt-3 pb-3 pe-3 mb-4" style="background-color: white; border-radius: 10px;">
+        BOLETO
+      </div> -->
+    </form>
+
+    <button class="btn btn-success w-100 m-3" (click)="contratar()">
+      FINALIZAR COMPRA
+    </button>
+  </div>
+</div>
