--- a/cursoADVweb/src/app/blog/blog.component.html
+++ b/cursoADVweb/src/app/blog/blog.component.html
@@ -1,4 +1,9 @@
 
+<div class="{{isMobile? '': 'defineTamanhoTela'}}">
+  <app-sidebar *ngIf="barBlog"></app-sidebar>
+
+</div>
+
 <div *ngIf="!isMobile" class="mb-5 d-flex justify-content-center" >
   <ul class="nav {{isMobile? 'flex-column ms-3':''}} mt-5" style=" padding-top: 10px;">
     <li *ngFor="let item of menu; let i = index" class="nav-item fs-4">
@@ -19,9 +24,20 @@
   <div class="container-fluid">
     <img src="../../assets/imgs/logoMobile.png" height="40">
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-      <span class="navbar-toggler-icon text-white"></span>
-    </button>
+    <div class="d-flex">
+      <button (click)="redirecionarLogin()" class="{{isMobile?'ms-3':''}}" type="button" [style]="isMobile?'': 'width: 150px;'"
+      class=" me-2 overlay-layer btn btn-sm btn-warning icon-button d-flex text-start shadow-sm rounded">
+        <!-- <i style="font-size: 46px;" class="material-icons me-2">perm_identity</i> -->
+        <img src="../../../assets/imgs/bonecoLivro.png" height="{{isMobile? '30':'50'}}">
+        <strong *ngIf="!isMobile" class="text-light defineFontBtns ps-2" style="font-size: 15px;">
+          ÁREA DO ALUNO
+        </strong>
+      </button>
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+        <span class="navbar-toggler-icon text-white"></span>
+      </button>
+    </div>
+
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
       <div class="offcanvas-header">
         <img src="../../assets/imgs/LogoTeste.png" height="60">
@@ -47,57 +63,9 @@
   </div>
 </nav>
 
-<div>
+<div class="{{isMobile? '': 'defineTamanhoTela'}}">
   <router-outlet></router-outlet>
 </div>
 
-<div class="w-100 mt-5 p-5 d-flex flex-wrap" style="background-color: #ee5b54; color: white;">
-  <div class="col-sm-12 col-md-3 col-lg-3 {{isMobile? '' : 'ps-4'}}">
-    <div class="col-sm-6 col-md-12">
-      <img src="../../assets/imgs/logoH.png" alt="" height="70">
-    </div>
-    <div class="col-sm-6 col-md-12 mt-4 defineFontGordita fs-5 ">
-      Um centro de estudos e
-      capacitação de pessoas
-      que atuam ou pretendem
-      atuar na área da proteção
-      infantojuvenil.
+<app-roda-pe></app-roda-pe>
 
-    </div>
-  </div>
-  <div class="col-sm-12 col-md-6 col-lg-6 d-flex flex-wrap pt-5">
-    <div class="col-sm-12 col-md-6 col-lg-6" [style]="isMobile?'':'padding-left: 6rem !important;'">
-      <div class="flex-wrap">
-        <h3>
-          <strong class="defineFontGordita">MENU</strong>
-        </h3>
-        <h4> Início </h4>
-        <h4> Quem somos </h4>
-        <h4> Nótícias </h4>
-      </div>
-    </div>
-
-    <div class="col-sm-12 col-md-6 col-lg-6" [style]="isMobile?'':'padding-left: 2rem !important;'">
-      <div class="flex-wrap">
-        <h3>
-          <strong class="defineFontGordita">CURSOS</strong>
-        </h3>
-        <h4> Direito da Criança e Adolescente </h4>
-        <h4> Grupo de Estudos </h4>
-        <h4> Fóruns </h4>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-12 col-md-3 col-lg-3 pt-5" [style]="isMobile?'' : 'padding-left: 2rem !important;'">
-    <div class="flex-wrap">
-      <h3>
-        <strong class="defineFontGordita">CONTATOS</strong>
-      </h3>
-      <h4> <img class="pe-1" src="../../assets/imgs/instagramBranco.png" alt="" height="25">{{'@centroproinf'}} </h4>
-      <h4> <img class="pe-1" src="../../assets/imgs/email.png" alt="" height="25">{{'centroproinf@gmail.com'}} </h4>
-    </div>
-  </div>
-</div>
-<div class="w-100 pt-4 text-center">
-  <span class="p-4 fs-5">Centro ProInf © 2024 - Todos os direitos reservados</span>
-</div>
