--- a/cursoADVweb/src/app/blog/pages/inicio/inicio.component.scss
+++ b/cursoADVweb/src/app/blog/pages/inicio/inicio.component.scss
@@ -112,21 +112,39 @@
   color: #EE5b54;
 }
 
-.flip-container {
+.flip-box {
+  background-color: transparent;
   width: 300px;
   height: 200px;
   perspective: 1000px;
 }
 
-.flipper {
+.flip-box-inner {
   position: relative;
   width: 100%;
   height: 100%;
+  text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
 }
 
-.flip-container:hover .flipper {
+.flip-box:hover .flip-box-inner {
   transform: rotateY(180deg);
 }
 
+.flip-box-front, .flip-box-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-box-front {
+  color: black;
+}
+
+.flip-box-back {
+  color: white;
+  transform: rotateY(180deg);
+}
